# ragentop

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/adapters/adapter-claude/: Cargo.toml
crates/adapters/adapter-claude/src/: detector.rs  lib.rs  parser.rs
crates/adapters/adapter-claude/tests/fixtures/: stats_cache.json
crates/adapters/adapter-codex/: Cargo.toml
crates/adapters/adapter-codex/src/: detector.rs  lib.rs
crates/adapters/adapter-common/: Cargo.toml
crates/adapters/adapter-common/src/: lib.rs
crates/adapters/adapter-copilot/: Cargo.toml
crates/adapters/adapter-copilot/src/: detector.rs  lib.rs
crates/adapters/adapter-gemini/: Cargo.toml
crates/adapters/adapter-gemini/src/: detector.rs  lib.rs
crates/adapters/adapter-glm/: Cargo.toml
crates/adapters/adapter-glm/src/: detector.rs  lib.rs
crates/adapters/adapter-qwen/: Cargo.toml
crates/adapters/adapter-qwen/src/: detector.rs  lib.rs  parser.rs
crates/ragentop-cli/: Cargo.toml
crates/ragentop-cli/src/: main.rs
crates/ragentop-core/: Cargo.toml
crates/ragentop-core/src/: adapter.rs  alert.rs  burnrate.rs  config.rs  error.rs  event.rs  lib.rs  multiplexer.rs  normalize.rs  pricing.rs  protocol.rs  stats.rs  types.rs
crates/ragentop-core/src/dag/: mod.rs  node.rs  port.rs  store.rs
crates/ragentop-daemon/: Cargo.toml
crates/ragentop-daemon/src/: config.rs  lib.rs  protocol.rs  registry.rs  session.rs  tmux.rs  zellij.rs
crates/ragentop-daemon/src/storage/: mod.rs  sled_store.rs
crates/ragentop-daemon/tests/: e2e_pipeline.rs
crates/ragentop-tui/: Cargo.toml
crates/ragentop-tui/src/: app.rs  input.rs  lib.rs  state.rs  ui.rs
crates/ragentop-tui/src/ui/: dashboard.rs  detail.rs  mod.rs  session_list.rs  theme.rs
crates/ragentop-tui/tests/: state_test.rs
crates/ragentop-web/: Cargo.toml
crates/ragentop-web/src/: app.rs  client.rs  lib.rs  main.rs  server.rs
crates/ragentop-web/src/components/: dashboard.rs  mod.rs  session_detail.rs  session_list.rs
docs/: MAKEFILE.md
docs/adr/: 001-hybrid-hexagonal-functional-core-architecture.md
docs/plans/: 2025-01-25-ragentop-implementation-plan.md  2025-01-25-ragentop-mvp-design.md  adapter-research.md
githooks/: pre-commit
reviews/: pr-35-review.md
