[package]
name = "ragentop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits (ports), and pure business logic for ragentop"
readme = "README.md"
keywords = ["agent", "monitoring", "ai"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
blake3.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest = "1.4"

[lints]
workspace = true
