[package]
name = "ragentop-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
ragentop-core = { path = "../ragentop-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
sled.workspace = true
directories.workspace = true
dirs.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
