[package]
name = "adapter-gemini"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Google Gemini CLI adapter for ragentop"
readme = "README.md"
keywords = ["agent", "monitoring", "ai"]
categories = ["development-tools"]

[dependencies]
ragentop-core = { path = "../../ragentop-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true
sysinfo = "0.32"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
